scripts are locally downloaded for performance

--- a/index.html
+++ b/index.html
@@ -3,36 +3,27 @@
 <!-- Welcome to my Online Resume Website!
      All of the HTML, CSS, and Bootstrap code I learned independently from online tutorials.
      This page is currently hosted by Namecheap, and the domain was purchased from Namecheap.
-     This site was last updated on Thursday, March 19th, 2020 @ 11:36 AM (EDT) -->
+     This site was last updated on Monday, April 13th, 2020 @ 12:41 PM (EDT) -->
 
-<html>
+<html lang="en">
     <head>
-        <title>David A. Buzzell</title>
-        <!-- Meta Content -->
-        <link rel="shortcut icon" href="./favicon.ico">
-
+        <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Unordered Meta Content -->
+        <title>David A. Buzzell</title>
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- TODO: Need to update to Bootstrap 4.0.0 -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
 
-        <!-- TODO: Evaluate using JQuery Direct versus AJAX for JQuery -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script> -->
-
-        <!-- TODO: Need to update to Bootstrap 4.0.0 -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script> -->
-        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
-
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" type="text/css" href="./main.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="shortcut icon" href="./favicon.ico">
     </head>
 
@@ -104,5 +95,13 @@
                 </figure>
             </div>
         </section>
+
+        <!-- Load scripts after everything else in the document -->
+        <script src="js/jquery-3.2.1.min.js"></script>
+
+        <!-- TODO: Need to update to Bootstrap 4.0.0 -->
+        <script src="js/bootstrap.min.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script> -->
+        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
     </body>
 </html>
