Removing TODO comments, now that bootstrap-4 branch exists

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
+        <link rel="shortcut icon" href="./favicon.ico">
 
-        <!-- TODO: Need to update to Bootstrap 4.0.0 -->
+        <!-- Stylesheets -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
-
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="shortcut icon" href="./favicon.ico">
     </head>
 
     <body>
@@ -98,10 +96,6 @@
 
         <!-- Load scripts after everything else in the document -->
         <script src="js/jquery-3.2.1.min.js"></script>
-
-        <!-- TODO: Need to update to Bootstrap 4.0.0 -->
         <script src="js/bootstrap.min.js"></script>
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script> -->
-        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
     </body>
 </html>
