Downloaded font awesome, updated contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
-        <title>Contact</title>
+        <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Unordered Meta Content -->
+        <title>Contact</title>
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="css/main.css">
         <link rel="shortcut icon" href="./favicon.ico">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
+        <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <section class="container">
@@ -41,17 +45,13 @@
                 <span>
                     <a href="https://github.com/xhamyd" class="fa fa-github"></a>
                     <a href="https://www.linkedin.com/in/dabuzzell/" class="fa fa-linkedin"></a>
-                    <a href="https://www.facebook.com/dabuzzell" class="fa fa-facebook"></a>
                     <a href="https://soundcloud.com/david-buzzell" class="fa fa-soundcloud"></a>
                     <a href="https://www.youtube.com/user/thebuzzle" class="fa fa-youtube"></a>
-                    <!--
-                    <a href="#" class="fa fa-snapchat-ghost"></a>
-                    <a href="#" class="fa fa-instagram"></a>
-                    <a href="#" class="fa fa-skype"></a>
-                    <a href="#" class="fa fa-reddit"></a>
-                    --->
                 </span>
             </div>
         </section>
+
+        <script src="js/jquery-3.2.1.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
