--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <link rel="shortcut icon" href="./favicon.ico">
+        <link rel="shortcut icon" href="favicon.ico">
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -51,6 +51,7 @@
             </div>
         </section>
 
+        <!-- Load scripts after everything else in the document -->
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
     </body>
