--- a/projects/non-contact-eeg.html
+++ b/projects/non-contact-eeg.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
-        <title>Project - Non-Contact Electrode EEG System</title>
+        <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Unordered Meta Content -->
+        <title>Project - Non-Contact Electrode EEG System</title>
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="shortcut icon" href="../favicon.ico">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="shortcut icon" href="../favicon.ico">
     </head>
-
     <body>
         <section class="container">
             <div class="page-header">
@@ -180,5 +183,9 @@
                 <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
             </div>
         </footer>
+
+        <!-- Load scripts after everything else in the document -->
+        <script src="../js/jquery-3.2.1.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
     </body>
 </html>
