--- a/work/student-life.html
+++ b/work/student-life.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
-        <title>Work Experience - Student Life</title>
+        <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Unordered Meta Content -->
+        <title>Work Experience - Student Life</title>
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="shortcut icon" href="../favicon.ico">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="shortcut icon" href="../favicon.ico">
     </head>
 
     <body>
@@ -92,15 +96,18 @@
                     </p>
                 </div>
             </div>
-      </section>
+        </section>
 
-      <footer class="container">
-          <div class="row">
-              <p class="col-lg-4">
-                  &copy; 2017 David Alexander Buzzell
-              </p>
-          </div>
-      </footer>
-    </section>
+        <footer class="container">
+            <div class="row">
+                <p class="col-lg-4">
+                    &copy; 2017 David Alexander Buzzell
+                </p>
+            </div>
+        </footer>
+
+        <!-- Load scripts after everything else in the document -->
+        <script src="../js/jquery-3.2.1.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
   </body>
 </html>
