Using a CDN instead of locally downloaded files

--- a/projects/non-contact-eeg.html
+++ b/projects/non-contact-eeg.html
@@ -15,7 +15,7 @@
         <link rel="shortcut icon" href="../favicon.ico">
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
     </head>
@@ -185,7 +185,7 @@
         </footer>
 
         <!-- Load scripts after everything else in the document -->
-        <script src="../js/jquery-3.2.1.min.js"></script>
-        <script src="../js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </body>
 </html>
