Updating the header comment

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 
-<!-- Welcome to my Online Resume Website!
-
-     All of the HTML, CSS, and Bootstrap code I learned independently from online tutorials.
-     This page is currently hosted by Namecheap, and the domain was purchased from Namecheap.
-     This site was last updated on Monday, April 13th, 2020 @ 12:41 PM (EDT) -->
+<!-- Welcome to my Online Resume Website! The main framework for this website is Bootstrap, but all of the other
+     HTML/CSS/JS files have been designed solely by myself, using only online tutorials and classes for reference. -->
 
 <html lang="en">
     <head>
