--- a/projects/music-tech-capstone.html
+++ b/projects/music-tech-capstone.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
-        <title>Project - Music and Techology Capstone</title>
+        <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Unordered Meta Content -->
+        <title>Project - Music and Techology Capstone</title>
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="shortcut icon" href="../favicon.ico">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="shortcut icon" href="../favicon.ico">
     </head>
-
     <body>
         <section class="container">
             <div class="page-header">
                 <h1>Projects</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -32,35 +34,35 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="centered-head small-head">Depth-Controlled Spatial Audio with High Order Ambisonics in a Speaker Ring</h1>
+                    <h1 class="centered-head small-head">Depth-Controlled Spatial Audio with High Order Ambisonics in a
+                        Speaker Ring</h1>
                     <h3 class="centered-head">Music and Technology Capstone Project</h3>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        For my Music and Technology degree, I completed an individual "Capstone-like" project that combined
-                        music with technology. This project is a system that incorporates depth-tracking and ambisonic audio to allow
-                        the user to accurately control an audio source's origin and intensity in a circular plane, as produced by a 360&deg;
-                        speaker ring.<br />
+                        For my Music and Technology degree, I completed an individual "Capstone-like" project that
+                        combined music with technology. This project is a system that incorporates depth-tracking and
+                        ambisonic audio to allow the user to accurately control an audio source's origin and intensity
+                        in a circular plane, as produced by a 360&deg; speaker ring.<br />
                         <br />
                         Below is a link to the materials used in the presentation of this project, including a
-                        <strong><a href="../documents/resume-website/music-technology-project-writeup.pdf">Project Writeup (PDF)</a></strong> and
+                        <strong><a href="../documents/resume-website/music-technology-project-writeup.pdf">Project
+                            Writeup (PDF)</a></strong> and
                         <strong><a href="https://www.youtube.com/watch?v=XfvVWxyaobQ">Video Demonstration</a></strong>
                         for viewers that were unable to attend the live demonstration of this system.
                     </p>
                 </div>
             </div>
-
             <div class="row">
                 <figure class="col-sm-6">
                     <div class="writeup-text">
                         <h3>Project Writeup</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/music-technology-project-writeup.pdf" role="button">
+                        <a class="btn btn-primary btn-lg"
+                           href="../documents/resume-website/music-technology-project-writeup.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -68,16 +70,21 @@
                 <figure class="col-sm-6">
                     <h3 class="centered-head">Video Demonstration</h3>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XfvVWxyaobQ" allowfullscreen=1></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XfvVWxyaobQ"
+                                allowfullscreen></iframe>
                     </div>
                 </figure>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2020 David Alexander Buzzell</p>
             </div>
         </footer>
+
+        <!-- Load scripts after everything else in the document -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     </body>
 </html>
