--- a/projects/non-contact-eeg.html
+++ b/projects/non-contact-eeg.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
-        <title>Project - Non-Contact Electrode EEG System</title>
+        <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Unordered Meta Content -->
+        <title>Project - Non-Contact Electrode EEG System</title>
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="shortcut icon" href="../favicon.ico">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="shortcut icon" href="../favicon.ico">
     </head>
-
     <body>
         <section class="container">
             <div class="page-header">
                 <h1>Projects</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -32,44 +34,49 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="centered-head small-head">Non-Contact/Wireless EEG Electrode System</h1>
                     <h3 class="centered-head">Summer Research Project</h3>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        During the Summer of 2016, I got the opportunity to work on a research team interested in innovating the modern EEG/ECG system.
-                        The team I joined in particular was focused on designing new electrodes (the contact points on the user's head) that were
-                        "wireless". Current electrode designs on the market are usually either dry (direct metal contacts that poke at the user's scalp)
-                        or wet (conductive gel is lubricated onto the user's scalp and the metal electrodes), which are painful, sticky, or
-                        otherwise uncomfortable for hours of data recording.<br />
+                        During the Summer of 2016, I got the opportunity to work on a research team interested in
+                        innovating the modern EEG/ECG system. The team I joined in particular was focused on designing
+                        new electrodes (the contact points on the user's head) that were "wireless". Current electrode
+                        designs on the market are usually either dry (direct metal contacts that poke at the user's
+                        scalp) or wet (conductive gel is lubricated onto the user's scalp and the metal electrodes),
+                        which are painful, sticky, or otherwise uncomfortable for hours of data recording.<br />
                         <br />
-                        The "wireless" electrode design is a flat, conductive device (similar in size to a U.S. quarter coin) that is placed on the
-                        user's head on top of their hair, which is a much more comfortable experience and easier to set up. Since there is no direct
-                        contact between the electrode and the scalp, this electrode "wirelessly" records the user's brainwave activity using an
-                        ultra-high impedance amplifier for strong capacitative coupling. From there, the electrode sends the voltage levels (after
-                        some noise rejection and analog-to-digital conversion) to a host microcontroller that reports the data in a graphical program,
-                        allowing researchers to test for brainwave patterns and health issues.<br />
+                        The "wireless" electrode design is a flat, conductive device (similar in size to a U.S. quarter
+                        coin) that is placed on the user's head on top of their hair, which is a much more comfortable
+                        experience and easier to set up. Since there is no direct contact between the electrode and the
+                        scalp, this electrode "wirelessly" records the user's brainwave activity using an ultra-high
+                        impedance amplifier for strong capacitative coupling. From there, the electrode sends the
+                        voltage levels (after some noise rejection and analog-to-digital conversion) to a host
+                        microcontroller that reports the data in a graphical program, allowing researchers to test for
+                        brainwave patterns and health issues.<br />
                         <br />
                         Below are links to some of the diagrams and findings for this project. This includes the
-                        <strong><a href="../documents/resume-website/design-presentation.pdf">Design Presentation</a></strong> used for our large team meetings, the
-                        <strong><a href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf">Parts Presentation</a></strong> that details exactly the components required for our proposed system, and the
-                        <strong><a href="https://github.com/xhamyd/NonContactElectrode">EAGLE Design Files</a></strong> to demonstrate the assembly of the electrode circuitry.
-                        Beneath that is an image slideshow of some of the graphics created to illustrate our electrode design.
+                        <strong><a href="../documents/resume-website/design-presentation.pdf">Design
+                            Presentation</a></strong> used for our large team meetings, the
+                        <strong><a href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf">
+                            Parts Presentation</a></strong> that details exactly the components required for our
+                        proposed system, and the
+                        <strong><a href="https://github.com/xhamyd/NonContactElectrode">EAGLE Design Files</a></strong>
+                        to demonstrate the assembly of the electrode circuitry. Beneath that is an image slideshow of
+                        some of the graphics created to illustrate our electrode design.
                     </p>
                 </div>
             </div>
-
             <div class="row">
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Design Presentation</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/design-presentation.pdf" role="button">
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/design-presentation.pdf"
+                           role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -77,27 +84,26 @@
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Parts Presentation</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf" role="button">
-                            <span class="glyphicon glyphicon-file"></span> View PDF
-                        </a>
+                        <a class="btn btn-primary btn-lg"
+                           href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf"
+                           role="button"><span class="glyphicon glyphicon-file"></span> View PDF</a>
                     </div>
                 </figure>
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>EAGLE Design Files</h3>
-                        <a class="btn btn-primary btn-lg" href="https://github.com/xhamyd/NonContactElectrode" role="button">
+                        <a class="btn btn-primary btn-lg" href="https://github.com/xhamyd/NonContactElectrode"
+                           role="button">
                             <span class="glyphicon glyphicon-link"></span> View code
                         </a>
                     </div>
                 </figure>
             </div>
-
             <div class="row projectrow">
                 <div class="col-lg-12">
                     <h2 class="centered-head">Some design files from lab presentation</h2>
                 </div>
             </div>
-
             <div id="myCarousel" class="carousel slide" data-interval="false">
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -106,7 +112,6 @@
                     <li data-target="#myCarousel" data-slide-to="3"></li>
                     <li data-target="#myCarousel" data-slide-to="4"></li>
                 </ol>
-
                 <div class="carousel-inner">
                     <div class="item active">
                         <a href="../images/noncontact1.jpg">
@@ -117,7 +122,6 @@
                             </div>
                         </a>
                     </div>
-
                     <div class="item">
                         <a href="../images/noncontact2.jpg">
                             <img src="../images/noncontact2.jpg" alt="Non-Contact 2" style="width:100%">
@@ -127,7 +131,6 @@
                             </div>
                         </a>
                     </div>
-
                     <div class="item">
                         <a href="../images/noncontact3.jpg">
                             <img src="../images/noncontact3.jpg" alt="Non-Contact 3" style="width:100%">
@@ -137,7 +140,6 @@
                             </div>
                         </a>
                     </div>
-
                     <div class="item">
                         <a href="../images/noncontact4.jpg">
                             <img src="../images/noncontact4.jpg" alt="Non-Contact 4" style="width:100%">
@@ -145,11 +147,11 @@
                                 <h3>Split Electrode Design - Doughnut</h3>
                                 <p>
                                     Cross-sectional (left) and bottom-side (right) diagram of<br />
-                                    proposed split-channel electrode design via concentric circles</p>
+                                    proposed split-channel electrode design via concentric circles
+                                </p>
                             </div>
                         </a>
                     </div>
-
                     <div class="item">
                         <a href="../images/noncontact5.jpg">
                             <img src="../images/noncontact5.jpg" alt="Non-Contact 5" style="width:100%">
@@ -157,28 +159,31 @@
                                 <h3>Split Electrode Design - Semicircles</h3>
                                 <p>
                                     Cross-sectional (left) and bottom-side (right) diagram of<br />
-                                    proposed split-channel electrode design via half circles</p>
+                                    proposed split-channel electrode design via half circles
+                                </p>
                             </div>
                         </a>
                     </div>
                 </div>
-
                 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-
                 <a class="right carousel-control" href="#myCarousel" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right"></span>
                     <span class="sr-only">Next</span>
                 </a>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2020 David Alexander Buzzell</p>
             </div>
         </footer>
+
+        <!-- Load scripts after everything else in the document -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     </body>
 </html>
