--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@
         <link rel="shortcut icon" href="./favicon.ico">
 
         <!-- Stylesheets -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
-
     <body>
         <nav class="navbar">
             <section class="container">
                 <!-- Just to create some header row space -->
             </section>
         </nav>
-
         <section class="container">
             <div class="jumbotron">
                 <h1>David A. Buzzell</h1>
@@ -95,9 +93,8 @@
         </section>
 
         <!-- Load scripts after everything else in the document -->
-        <!-- Source: https://stackoverflow.com/a/45657711-->
-        <script src="js/jquery-3.2.1.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     </body>
 </html>
