--- a/projects/ece-capstone.html
+++ b/projects/ece-capstone.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
-        <title>Project - Electrical and Computer Engineering Capstone</title>
+        <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Unordered Meta Content -->
+        <title>Project - Electrical and Computer Engineering Capstone</title>
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="shortcut icon" href="../favicon.ico">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="shortcut icon" href="../favicon.ico">
     </head>
-
     <body>
         <section class="container">
             <div class="page-header">
                 <h1>Projects</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -32,44 +34,43 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="centered-head small-head">3D Object Reconstruction</h1>
                     <h3 class="centered-head">Electrical and Computer Engineering Capstone Project</h3>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        As part of our Electrical and Computer Engineering degree program, we completed a group Capstone project that needed
-                        use signal processing and/or pattern recognition in its solution. Our project used point capture technology
-                        to obtain depth points for real world objects, and then process them to create 3D mesh models inside a virtual
-                        environment. This project used Nearest Neighbor Filtering, Multiple Viewpoint Registration, Euclidean Clustering
-                        for Segmentation, and Fast Triangulation Meshing.<br />
+                        As part of our Electrical and Computer Engineering degree program, we completed a group
+                        Capstone project that needed use signal processing and/or pattern recognition in its solution.
+                        Our project used point capture technology to obtain depth points for real world objects, and
+                        then process them to create 3D mesh models inside a virtual environment. This project used
+                        Nearest Neighbor Filtering, Multiple Viewpoint Registration, Euclidean Clustering for
+                        Segmentation, and Fast Triangulation Meshing.<br />
                         <br />
-                        Below is our presentation materials, including the
+                        Below are our presentation materials, including the
                         <strong><a href="../documents/resume-website/final-report.pdf">Final Report</a></strong>,
-                        <strong><a href="../documents/resume-website/final-project-presentation.pdf">Final Presentation</a></strong>, and
+                        <strong><a href="../documents/resume-website/final-project-presentation.pdf">Final
+                            Presentation</a></strong>, and
                         <strong><a href="../documents/resume-website/final-poster.pdf">Final Poster</a></strong>.
                     </p>
                 </div>
             </div>
-
             <div class="row">
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Final Report</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-report.pdf" role="button">
-                            <span class="glyphicon glyphicon-file"></span> View PDF
-                        </a>
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-report.pdf"
+                           role="button"><span class="glyphicon glyphicon-file"></span> View PDF</a>
                     </div>
                 </figure>
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Final Presentation</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-project-presentation.pdf" role="button">
+                        <a class="btn btn-primary btn-lg"
+                           href="../documents/resume-website/final-project-presentation.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -77,18 +78,21 @@
                 <figure class="col-sm-4">
                     <div class="writeup-text">
                         <h3>Final Poster</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-poster.pdf" role="button">
-                            <span class="glyphicon glyphicon-file"></span> View PDF
-                        </a>
+                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-poster.pdf"
+                           role="button"> <span class="glyphicon glyphicon-file"></span> View PDF</a>
                     </div>
                 </figure>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2020 David Alexander Buzzell</p>
             </div>
         </footer>
+
+        <!-- Load scripts after everything else in the document -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     </body>
 </html>
