--- a/projects/music-generation-tool.html
+++ b/projects/music-generation-tool.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
-        <title>Project - Music Generation Tool</title>
+        <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Unordered Meta Content -->
+        <title>Project - Music Generation Tool</title>
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="shortcut icon" href="../favicon.ico">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="shortcut icon" href="../favicon.ico">
     </head>
-
     <body>
         <section class="container">
             <div class="page-header">
                 <h1>Projects</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -32,31 +34,29 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="centered-head small-head">Music Generation Tool</h1>
                     <h3 class="centered-head">15-112 Term Project</h3>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        My Intro to Programming Final Project is one of my earliest projects that explored the intersection between music and technology.
-                        This tool accepts user input through a graphical piano keyboard, and then takes the musical measure of input and
-                        implements recursive backtracking to randomly generate the remaining measures of music to play back to you.<br />
+                        My Intro to Programming Final Project is one of my earliest projects that explored the
+                        intersection between music and technology. This tool accepts user input through a graphical
+                        piano keyboard, and then takes the musical measure of input and implements recursive
+                        backtracking to randomly generate the remaining measures of music to play back to you.<br />
                         <br />
                         Below is a link to the
-                        <strong><a href="https://github.com/xhamyd/term-project">Github repo</a></strong> that details each part of this project,
-                        including code files, documentation, timesheet of hours spent on each part, and how to setup and run the project. Next to that
-                        link is a
+                        <strong><a href="https://github.com/xhamyd/term-project">Github repo</a></strong> that details
+                        each part of this project, including code files, documentation, timesheet of hours spent on
+                        each part, and how to setup and run the project. Next to that link is a
                         <strong><a href="https://www.youtube.com/watch?v=hdQuuhRBFQE">video presentation</a></strong>,
                         submitted alongside the project files.
                     </p>
                 </div>
             </div>
-
             <div class="row">
                 <figure class="col-sm-6">
                     <div class="writeup-text">
@@ -69,16 +69,21 @@
                 <figure class="col-sm-6">
                     <h3 class="centered-head">Video Presentation</h3>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hdQuuhRBFQE" allowfullscreen=1></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hdQuuhRBFQE"
+                                allowfullscreen></iframe>
                     </div>
                 </figure>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2020 David Alexander Buzzell</p>
             </div>
         </footer>
+
+        <!-- Load scripts after everything else in the document -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     </body>
 </html>
