--- a/projects/orchestration-final-project.html
+++ b/projects/orchestration-final-project.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
-        <title>Project - Orchestration Final Project</title>
+        <!-- Primary Meta Content -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Unordered Meta Content -->
+        <title>Project - Orchestration Final Project</title>
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="shortcut icon" href="../favicon.ico">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <link rel="shortcut icon" href="../favicon.ico">
     </head>
-
     <body>
         <section class="container">
             <div class="page-header">
                 <h1>Projects</h1>
             </div>
-
             <div class="row">
                 <div class="col-sm-12">
                     <div class="btn-group btn-group-justified">
@@ -32,38 +34,42 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="centered-head small-head">Large Symphonic Orchestration with Audio Sampling and Synthesis</h1>
+                    <h1 class="centered-head small-head">Large Symphonic Orchestration with Audio Sampling and
+                        Synthesis</h1>
                     <h3 class="centered-head">Orchestration Final Project</h3>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-lg-12">
                     <p class="project-text">
-                        As part of my Music and Technology degree, I took a class on Orchestration, or the art of arranging a musical work
-                        for a large symphonic orchestra. In addition to learning about the different instrument classes and the proper notation
-                        for each instrument, this class also explored modern sampling libraries (eg.
-                        <a href="http://www.spitfireaudio.com/shop/a-z/albion-one/" target="_blank">Spitfire Audio's Albion One</a>) and audio editing
-                        software (eg. <a href="https://www.ableton.com/en/live/" target="_blank">Ableton Live</a>) since modern orchestrators tend to
-                        synthesize their projects as high quality as possible before getting a live orchestra to play and record the symphonic work.<br />
+                        As part of my Music and Technology degree, I took a class on Orchestration, or the art of
+                        arranging a musical work for a large symphonic orchestra. In addition to learning about the
+                        different instrument classes and the proper notation for each instrument, this class also
+                        explored modern sampling libraries (eg.
+                        <a href="http://www.spitfireaudio.com/shop/a-z/albion-one/" target="_blank">Spitfire Audio's
+                        Albion One</a>) and audio editing software (eg.
+                        <a href="https://www.ableton.com/en/live/" target="_blank">Ableton Live</a>) since modern
+                        orchestrators tend to synthesize their projects as high quality as possible before getting a
+                        live orchestra to play and record the symphonic work.<br />
                         <br />
-                        With this knowledge and practice, I completed a final project that took the basics of a melody line (created by the
-                        professor), and transformed it to a large, 34-part orchestral work. Below are links to the
-                        <strong><a href="../documents/resume-website/final-project-orchestration.pdf">Sheet Music</a></strong> and a
-                        <strong><a href="https://www.youtube.com/watch?v=n1Kp4D6ud14">Video</a></strong>
-                        which contains the synthesized audio recording along with the sheet music, scrolling in time with the recording.
+                        With this knowledge and practice, I completed a final project that took the basics of a melody
+                        line (created by my professor), and transformed it to a large, 34-part orchestral work. Below
+                        are links to the <strong><a
+                            href="../documents/resume-website/final-project-orchestration.pdf">Sheet Music</a></strong>
+                        and a <strong><a
+                            href="https://www.youtube.com/watch?v=n1Kp4D6ud14">Video</a></strong>which contains the
+                        synthesized audio recording along with the sheet music, scrolling in time with the recording.
                     </p>
                 </div>
             </div>
-
             <div class="row">
                 <figure class="col-sm-6">
                     <div class="writeup-text">
                         <h3>Sheet Music</h3>
-                        <a class="btn btn-primary btn-lg" href="../documents/resume-website/final-project-orchestration.pdf" role="button">
+                        <a class="btn btn-primary btn-lg"
+                           href="../documents/resume-website/final-project-orchestration.pdf" role="button">
                             <span class="glyphicon glyphicon-file"></span> View PDF
                         </a>
                     </div>
@@ -71,16 +77,21 @@
                 <figure class="col-sm-6">
                     <h3 class="centered-head">Audio Recording with Scrolling Sheet Music</h3>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/n1Kp4D6ud14" allowfullscreen=1></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/n1Kp4D6ud14"
+                                allowfullscreen></iframe>
                     </div>
                 </figure>
             </div>
         </section>
-
         <footer class="container">
             <div class="row">
-                <p class="col-lg-4">&copy; 2019 David Alexander Buzzell</p>
+                <p class="col-lg-4">&copy; 2020 David Alexander Buzzell</p>
             </div>
         </footer>
+
+        <!-- Load scripts after everything else in the document -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     </body>
 </html>
